<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contact_person_form_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="50dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="70dp"
    android:scrollbars="vertical">

    <LinearLayout
        android:id="@+id/contact_person_form_id"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/darker_gray"
        android:orientation="vertical">

        <!--Put form controls here-->
        <TextView
            android:id="@+id/TextViewName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contactPersonName"
            android:textSize="10pt"></TextView>

        <EditText
            android:id="@+id/EditTextName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"></EditText>

        <TextView
            android:id="@+id/TextViewNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactPersonNumber"
            android:textSize="10pt"></TextView>

        <EditText
            android:id="@+id/EditTextNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numberHint"></EditText>

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:onClick="addContactPerson"
            android:text="@string/submitButton">

        </Button>
    </LinearLayout>
</ScrollView>
