<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1d002a"
    android:textColor="#FFFFFF">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/ec_img"
        android:clickable="false"
        app:srcCompat="@drawable/emergency_contacts" />

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_btn"
        android:layout_alignBottom="@+id/edit_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="65dp"
        android:layout_marginStart="65dp"
        android:width="105dp"
        android:height="60dp"
        android:onClick="confirmContacts"
        android:text="@string/confirmTitle"
        android:textSize="15sp" />

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@+id/confirm_btn"
        android:layout_toRightOf="@+id/confirm_btn"
        android:width="105dp"
        android:height="60dp"
        android:onClick="editContactsList"
        android:text="@string/editTitle"
        android:textSize="15sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/confirm_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:background="#1d002a"
        android:textColor="#ffffff"
        android:id="@+id/scrollView2">

        <TableLayout
            android:id="@+id/contacts_tbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="35dp"
            android:background="#1d002a"
            android:paddingLeft="7dp"></TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/button9"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:background="@drawable/info30"
        android:layout_alignBottom="@+id/edit_btn"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/edit_btn"
        android:layout_toRightOf="@+id/edit_btn"
        android:onClick="showTutorials"/>

</RelativeLayout>
